--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/spotify-web-api-node": "^5.0.11",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "csv-parser": "^3.0.0",
     "express": "^4.21.1",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
