--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "csv-parser": "^3.0.0",
     "express": "^4.21.1",
     "lucide-react": "^0.460.0",
+    "motion": "^11.11.17",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
     "node-fetch": "^2.7.0",
